# VoxelLab

./: .gitignore  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  R2_SETUP.md  README.md  SECURITY.md  ai_runtime.py  analyze.py  ask.py  biomarkers.py  brain_extract.py  cloud_series.py  compress_volumes.py  config.json  context.py  convert.py  convert_ct.py  detect.py  engine_preflight.py  engine_report.py  engine_sources.py  eslint.config.js  geometry.py  index.html  make_previews.py  metadata.py  middleware.js  modal_app.py  modal_contract.py  modal_dicom.py  modal_io.py  modal_regions.py  modal_validation.py  modal_volumes.py  modal_webhooks.py  package-lock.json  (+26 more)
css/: base.css  command-palette.css  modals.css  panels.css  responsive.css  sidebar.css  toolbar.css  viewer.css
data/: manifest.json
demo_packs/: catalog.json
js/: adc.js  analysis-findings.js  angle.js  annotation-graph.js  annotation.js  auto-window-level.js  bootstrap.js  cached-fetch.js  chrome-shell.js  cine.js  clear-slice-drawings.js  clip-readouts.js  cloud.js  collapsible-sidebar.js  colormap.js  command-palette.js  compare.js  config.js  constants.js  consult-ask.js  coords.js  dependencies.js  derived-objects.js  dicom-codecs.js  dicom-derived-import.js  dicom-frame-meta.js  dicom-import-parse.js  dicom-import.js  dicom-sr-collect.js  dicom-sr-dataset.js  dicom-sr-utils.js  dicom_sr.js  dom.js  error.js  fusion-regions.js  geometry.js  info-tips.js  inspection-readout.js  lanczos.js  local-backend-mode.js  (+76 more)
scripts/: build_openneuro_lite_pack.py  check_ai_ready.py  check_assets.py  check_env.py  check_geometry_parity.mjs  check_inline_styles.mjs  check_manifest.py  check_pipeline_ready.py  check_reference_parity.py  check_slimsam_ready.py  check_validation_matrix.py  install_demo_data.py  merge_modal_result.py  refresh_ai_data.py  render_config.mjs  rtk_projection_wrapper.py  run_python.mjs  setup_dev.mjs  submit_modal_study.py
templates/: ask-modal.html  command-palette.html  help-modal.html  modals-shell.html  panels.html  sidebar.html  toolbar.html  upload-modal.html  viewer-shell.html
tests/: active-overlay-state.test.mjs  angle.test.mjs  annotation-graph.test.mjs  cached-fetch.test.mjs  cloud-upload.test.mjs  colormap.test.mjs  compare.test.mjs  derived-objects.test.mjs  dicom-derived-import.test.mjs  dicom-import-dicomweb.test.mjs  plugin.test.mjs  (+61 more)
(+27 files in other folders)
